sdk/netapp/arm-netapp/samples/v22/typescript/README.md
# @azure/arm-netapp client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-netapp in some common scenarios.

| **File Name**                                                                                     | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [accountsChangeKeyVaultSample.ts][accountschangekeyvaultsample]                                   | affects existing volumes that are encrypted with Key Vault/Managed HSM, and new volumes. Supports HSM to Key Vault, Key Vault to HSM, HSM to HSM and Key Vault to Key Vault. x-ms-original-file: 2025-12-01/Accounts_ChangeKeyVault.json                                                                                                                                                                                                                                                                                                                                       |
| [accountsCreateOrUpdateSample.ts][accountscreateorupdatesample]                                   | create or update the specified NetApp account within the resource group x-ms-original-file: 2025-12-01/Accounts_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [accountsDeleteSample.ts][accountsdeletesample]                                                   | delete the specified NetApp account x-ms-original-file: 2025-12-01/Accounts_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [accountsGetChangeKeyVaultInformationSample.ts][accountsgetchangekeyvaultinformationsample]       | contains data from encryption.keyVaultProperties as well as information about which private endpoint is used by each encryption sibling set. Response from this endpoint can be modified and used as request body for POST request. x-ms-original-file: 2025-12-01/Accounts_GetChangeKeyVaultInformation.json                                                                                                                                                                                                                                                                  |
| [accountsGetSample.ts][accountsgetsample]                                                         | get the NetApp account x-ms-original-file: 2025-12-01/Accounts_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [accountsListBySubscriptionSample.ts][accountslistbysubscriptionsample]                           | list and describe all NetApp accounts in the subscription. x-ms-original-file: 2025-12-01/Accounts_ListBySubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [accountsListSample.ts][accountslistsample]                                                       | list and describe all NetApp accounts in the resource group. x-ms-original-file: 2025-12-01/Accounts_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [accountsRenewCredentialsSample.ts][accountsrenewcredentialssample]                               | renew identity credentials that are used to authenticate to key vault, for customer-managed key encryption. If encryption.identity.principalId does not match identity.principalId, running this operation will fix it. x-ms-original-file: 2025-12-01/Accounts_RenewCredentials.json                                                                                                                                                                                                                                                                                          |
| [accountsTransitionToCmkSample.ts][accountstransitiontocmksample]                                 | transitions all volumes in a VNet to a different encryption key source (Microsoft-managed key or Azure Key Vault). Operation fails if targeted volumes share encryption sibling set with volumes from another account. x-ms-original-file: 2025-12-01/Accounts_TransitionEncryptionKey.json                                                                                                                                                                                                                                                                                    |
| [accountsUpdateSample.ts][accountsupdatesample]                                                   | patch the specified NetApp account x-ms-original-file: 2025-12-01/Accounts_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [backupPoliciesCreateSample.ts][backuppoliciescreatesample]                                       | create a backup policy for Netapp Account x-ms-original-file: 2025-12-01/BackupPolicies_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [backupPoliciesDeleteSample.ts][backuppoliciesdeletesample]                                       | delete backup policy x-ms-original-file: 2025-12-01/BackupPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [backupPoliciesGetSample.ts][backuppoliciesgetsample]                                             | get a particular backup Policy x-ms-original-file: 2025-12-01/BackupPolicies_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [backupPoliciesListSample.ts][backuppolicieslistsample]                                           | list backup policies for Netapp Account x-ms-original-file: 2025-12-01/BackupPolicies_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [backupPoliciesUpdateSample.ts][backuppoliciesupdatesample]                                       | patch a backup policy for Netapp Account x-ms-original-file: 2025-12-01/BackupPolicies_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [backupVaultsCreateOrUpdateSample.ts][backupvaultscreateorupdatesample]                           | create or update the specified Backup Vault in the NetApp account x-ms-original-file: 2025-12-01/BackupVaults_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupVaultsDeleteSample.ts][backupvaultsdeletesample]                                           | delete the specified Backup Vault x-ms-original-file: 2025-12-01/BackupVaults_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupVaultsGetSample.ts][backupvaultsgetsample]                                                 | get the Backup Vault x-ms-original-file: 2025-12-01/BackupVaults_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupVaultsListByNetAppAccountSample.ts][backupvaultslistbynetappaccountsample]                 | list and describe all Backup Vaults in the NetApp account. x-ms-original-file: 2025-12-01/BackupVaults_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [backupVaultsUpdateSample.ts][backupvaultsupdatesample]                                           | patch the specified NetApp Backup Vault x-ms-original-file: 2025-12-01/BackupVaults_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [backupsCreateSample.ts][backupscreatesample]                                                     | create a backup under the Backup Vault x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupsDeleteSample.ts][backupsdeletesample]                                                     | delete a Backup under the Backup Vault x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupsGetLatestStatusSample.ts][backupsgetlateststatussample]                                   | get the latest status of the backup for a volume x-ms-original-file: 2025-12-01/Volumes_LatestBackupStatus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [backupsGetSample.ts][backupsgetsample]                                                           | get the specified Backup under Backup Vault. x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [backupsGetVolumeLatestRestoreStatusSample.ts][backupsgetvolumelatestrestorestatussample]         | get the latest status of the restore for a volume x-ms-original-file: 2025-12-01/Volumes_LatestRestoreStatus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [backupsListByVaultSample.ts][backupslistbyvaultsample]                                           | list all backups Under a Backup Vault x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [backupsUnderAccountMigrateBackupsSample.ts][backupsunderaccountmigratebackupssample]             | migrate the backups under a NetApp account to backup vault x-ms-original-file: 2025-12-01/BackupsUnderAccount_Migrate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [backupsUnderBackupVaultRestoreFilesSample.ts][backupsunderbackupvaultrestorefilessample]         | restore the specified files from the specified backup to the active filesystem x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_SingleFileRestore.json                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [backupsUnderVolumeMigrateBackupsSample.ts][backupsundervolumemigratebackupssample]               | migrate the backups under volume to backup vault x-ms-original-file: 2025-12-01/BackupsUnderVolume_Migrate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [backupsUpdateSample.ts][backupsupdatesample]                                                     | patch a Backup under the Backup Vault x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [netAppResourceCheckFilePathAvailabilitySample.ts][netappresourcecheckfilepathavailabilitysample] | check if a file path is available. x-ms-original-file: 2025-12-01/CheckFilePathAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [netAppResourceCheckNameAvailabilitySample.ts][netappresourcechecknameavailabilitysample]         | check if a resource name is available. x-ms-original-file: 2025-12-01/CheckNameAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [netAppResourceCheckQuotaAvailabilitySample.ts][netappresourcecheckquotaavailabilitysample]       | check if a quota is available. x-ms-original-file: 2025-12-01/CheckQuotaAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [netAppResourceQueryNetworkSiblingSetSample.ts][netappresourcequerynetworksiblingsetsample]       | get details of the specified network sibling set. x-ms-original-file: 2025-12-01/NetworkSiblingSet_Query.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [netAppResourceQueryRegionInfoSample.ts][netappresourcequeryregioninfosample]                     | provides storage to network proximity and logical zone mapping information. x-ms-original-file: 2025-12-01/RegionInfo.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [netAppResourceQuotaLimitsAccountGetSample.ts][netappresourcequotalimitsaccountgetsample]         | get the default, current and usages account quota limit x-ms-original-file: 2025-12-01/NetAppResourceQuotaLimitsAccount_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [netAppResourceQuotaLimitsAccountListSample.ts][netappresourcequotalimitsaccountlistsample]       | gets a list of quota limits for all quotas that are under account. Currently PoolsPerAccount is the only one. x-ms-original-file: 2025-12-01/NetAppResourceQuotaLimitsAccount_List.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [netAppResourceQuotaLimitsGetSample.ts][netappresourcequotalimitsgetsample]                       | get the default and current quota limit x-ms-original-file: 2025-12-01/NetAppResourceQuotaLimits_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [netAppResourceQuotaLimitsListSample.ts][netappresourcequotalimitslistsample]                     | get the default and current limits for quotas x-ms-original-file: 2025-12-01/NetAppResourceQuotaLimits_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [netAppResourceRegionInfosGetSample.ts][netappresourceregioninfosgetsample]                       | provides storage to network proximity and logical zone mapping information. x-ms-original-file: 2025-12-01/RegionInfos_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [netAppResourceRegionInfosListSample.ts][netappresourceregioninfoslistsample]                     | provides region specific information. x-ms-original-file: 2025-12-01/RegionInfos_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [netAppResourceUpdateNetworkSiblingSetSample.ts][netappresourceupdatenetworksiblingsetsample]     | update the network features of the specified network sibling set. x-ms-original-file: 2025-12-01/NetworkSiblingSet_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [netAppResourceUsagesGetSample.ts][netappresourceusagesgetsample]                                 | get current subscription usage of the specific type x-ms-original-file: 2025-12-01/Usages_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [netAppResourceUsagesListSample.ts][netappresourceusageslistsample]                               | get current subscription usages x-ms-original-file: 2025-12-01/Usages_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [operationsListSample.ts][operationslistsample]                                                   | list the operations for the provider x-ms-original-file: 2025-12-01/OperationList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [poolsCreateOrUpdateSample.ts][poolscreateorupdatesample]                                         | create or Update a capacity pool x-ms-original-file: 2025-12-01/Pools_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [poolsDeleteSample.ts][poolsdeletesample]                                                         | delete the specified capacity pool x-ms-original-file: 2025-12-01/Pools_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [poolsGetSample.ts][poolsgetsample]                                                               | get details of the specified capacity pool x-ms-original-file: 2025-12-01/Pools_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [poolsListSample.ts][poolslistsample]                                                             | list all capacity pools in the NetApp Account x-ms-original-file: 2025-12-01/Pools_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [poolsUpdateSample.ts][poolsupdatesample]                                                         | patch the specified capacity pool x-ms-original-file: 2025-12-01/Pools_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [ransomwareReportsClearSuspectsSample.ts][ransomwarereportsclearsuspectssample]                   | clear ransomware suspects for the given Advanced Ransomware Protection report. You should evaluate the report to determine whether the activity is acceptable (false positive) or whether an attack seems malicious. ARP creates snapshots named Anti_ransomware_backup when it detects a potential ransomware threat. You can use one of these ARP snapshots or another snapshot of your volume to restore data", x-ms-original-file: 2025-12-01/RansomwareReports_ClearSuspects.json                                                                                         |
| [ransomwareReportsGetSample.ts][ransomwarereportsgetsample]                                       | get details of the specified ransomware report (ARP) ARP reports are created with a list of suspected files when it detects any combination of high data entropy, abnormal volume activity with data encryption, and unusual file extensions. ARP creates snapshots named Anti_ransomware_backup when it detects a potential ransomware threat. You can use one of these ARP snapshots or another snapshot of your volume to restore data. x-ms-original-file: 2025-12-01/RansomwareReports_Get.json                                                                           |
| [ransomwareReportsListSample.ts][ransomwarereportslistsample]                                     | list all ransomware reports for the volume Returns a list of the Advanced Ransomware Protection (ARP) reports for the volume. ARP reports are created with a list of suspected files when it detects any combination of high data entropy, abnormal volume activity with data encryption, and unusual file extensions. ARP creates snapshots named Anti_ransomware_backup when it detects a potential ransomware threat. You can use one of these ARP snapshots or another snapshot of your volume to restore data" x-ms-original-file: 2025-12-01/RansomwareReports_List.json |
| [snapshotPoliciesCreateSample.ts][snapshotpoliciescreatesample]                                   | create a snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [snapshotPoliciesDeleteSample.ts][snapshotpoliciesdeletesample]                                   | delete snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [snapshotPoliciesGetSample.ts][snapshotpoliciesgetsample]                                         | get a snapshot Policy x-ms-original-file: 2025-12-01/SnapshotPolicies_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [snapshotPoliciesListSample.ts][snapshotpolicieslistsample]                                       | list snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [snapshotPoliciesListVolumesSample.ts][snapshotpolicieslistvolumessample]                         | get volumes associated with snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_ListVolumes.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [snapshotPoliciesUpdateSample.ts][snapshotpoliciesupdatesample]                                   | patch a snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [snapshotsCreateSample.ts][snapshotscreatesample]                                                 | create the specified snapshot within the given volume x-ms-original-file: 2025-12-01/Snapshots_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [snapshotsDeleteSample.ts][snapshotsdeletesample]                                                 | delete snapshot x-ms-original-file: 2025-12-01/Snapshots_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [snapshotsGetSample.ts][snapshotsgetsample]                                                       | get details of the specified snapshot x-ms-original-file: 2025-12-01/Snapshots_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [snapshotsListSample.ts][snapshotslistsample]                                                     | list all snapshots associated with the volume x-ms-original-file: 2025-12-01/Snapshots_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [snapshotsRestoreFilesSample.ts][snapshotsrestorefilessample]                                     | restore the specified files from the specified snapshot to the active filesystem x-ms-original-file: 2025-12-01/Snapshots_SingleFileRestore.json                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [snapshotsUpdateSample.ts][snapshotsupdatesample]                                                 | patch a snapshot x-ms-original-file: 2025-12-01/Snapshots_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [subvolumesCreateSample.ts][subvolumescreatesample]                                               | creates a subvolume in the path or clones the subvolume mentioned in the parentPath x-ms-original-file: 2025-12-01/Subvolumes_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [subvolumesDeleteSample.ts][subvolumesdeletesample]                                               | delete subvolume x-ms-original-file: 2025-12-01/Subvolumes_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [subvolumesGetMetadataSample.ts][subvolumesgetmetadatasample]                                     | get details of the specified subvolume x-ms-original-file: 2025-12-01/Subvolumes_Metadata.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [subvolumesGetSample.ts][subvolumesgetsample]                                                     | returns the path associated with the subvolumeName provided x-ms-original-file: 2025-12-01/Subvolumes_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [subvolumesListByVolumeSample.ts][subvolumeslistbyvolumesample]                                   | returns a list of the subvolumes in the volume x-ms-original-file: 2025-12-01/Subvolumes_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [subvolumesUpdateSample.ts][subvolumesupdatesample]                                               | patch a subvolume x-ms-original-file: 2025-12-01/Subvolumes_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [volumeGroupsCreateSample.ts][volumegroupscreatesample]                                           | create a volume group along with specified volumes x-ms-original-file: 2025-12-01/VolumeGroups_Create_Oracle.json                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [volumeGroupsDeleteSample.ts][volumegroupsdeletesample]                                           | delete the specified volume group only if there are no volumes under volume group. x-ms-original-file: 2025-12-01/VolumeGroups_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [volumeGroupsGetSample.ts][volumegroupsgetsample]                                                 | get details of the specified volume group x-ms-original-file: 2025-12-01/VolumeGroups_Get_Oracle.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [volumeGroupsListByNetAppAccountSample.ts][volumegroupslistbynetappaccountsample]                 | list all volume groups for given account x-ms-original-file: 2025-12-01/VolumeGroups_List_Oracle.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [volumeQuotaRulesCreateSample.ts][volumequotarulescreatesample]                                   | create the specified quota rule within the given volume x-ms-original-file: 2025-12-01/VolumeQuotaRules_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [volumeQuotaRulesDeleteSample.ts][volumequotarulesdeletesample]                                   | delete quota rule x-ms-original-file: 2025-12-01/VolumeQuotaRules_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumeQuotaRulesGetSample.ts][volumequotarulesgetsample]                                         | get details of the specified quota rule x-ms-original-file: 2025-12-01/VolumeQuotaRules_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [volumeQuotaRulesListByVolumeSample.ts][volumequotaruleslistbyvolumesample]                       | list all quota rules associated with the volume x-ms-original-file: 2025-12-01/VolumeQuotaRules_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [volumeQuotaRulesUpdateSample.ts][volumequotarulesupdatesample]                                   | patch a quota rule x-ms-original-file: 2025-12-01/VolumeQuotaRules_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [volumesAuthorizeExternalReplicationSample.ts][volumesauthorizeexternalreplicationsample]         | starts SVM peering and returns a command to be run on the external ONTAP to accept it. Once the SVM have been peered a SnapMirror will be created x-ms-original-file: 2025-12-01/Volumes_AuthorizeExternalReplication.json                                                                                                                                                                                                                                                                                                                                                     |
| [volumesAuthorizeReplicationSample.ts][volumesauthorizereplicationsample]                         | authorize the replication connection on the source volume x-ms-original-file: 2025-12-01/Volumes_AuthorizeReplication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [volumesBreakFileLocksSample.ts][volumesbreakfilelockssample]                                     | break all the file locks on a volume x-ms-original-file: 2025-12-01/Volumes_BreakFileLocks.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [volumesBreakReplicationSample.ts][volumesbreakreplicationsample]                                 | break the replication connection on the destination volume x-ms-original-file: 2025-12-01/Volumes_BreakReplication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [volumesCreateOrUpdateSample.ts][volumescreateorupdatesample]                                     | create or update the specified volume within the capacity pool x-ms-original-file: 2025-12-01/Volumes_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [volumesDeleteReplicationSample.ts][volumesdeletereplicationsample]                               | delete the replication connection on the destination volume, and send release to the source replication x-ms-original-file: 2025-12-01/Volumes_DeleteReplication.json                                                                                                                                                                                                                                                                                                                                                                                                          |
| [volumesDeleteSample.ts][volumesdeletesample]                                                     | delete the specified volume x-ms-original-file: 2025-12-01/Volumes_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [volumesFinalizeExternalReplicationSample.ts][volumesfinalizeexternalreplicationsample]           | finalizes the migration of an external volume by releasing the replication and breaking the external cluster peering if no other migration is active. x-ms-original-file: 2025-12-01/Volumes_FinalizeExternalReplication.json                                                                                                                                                                                                                                                                                                                                                  |
| [volumesFinalizeRelocationSample.ts][volumesfinalizerelocationsample]                             | finalizes the relocation of the volume and cleans up the old volume. x-ms-original-file: 2025-12-01/Volumes_FinalizeRelocation.json                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [volumesGetSample.ts][volumesgetsample]                                                           | get the details of the specified volume x-ms-original-file: 2025-12-01/Volumes_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [volumesListGetGroupIdListForLdapUserSample.ts][volumeslistgetgroupidlistforldapusersample]       | returns the list of group Ids for a specific LDAP User x-ms-original-file: 2025-12-01/GroupIdListForLDAPUser.json                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [volumesListQuotaReportSample.ts][volumeslistquotareportsample]                                   | get quota report for volume (with filter support) x-ms-original-file: 2025-12-01/Volumes_ListQuotaReport.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumesListReplicationsSample.ts][volumeslistreplicationssample]                                 | list all replications for a specified volume x-ms-original-file: 2025-12-01/Volumes_ListReplications.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [volumesListSample.ts][volumeslistsample]                                                         | list all volumes within the capacity pool x-ms-original-file: 2025-12-01/Volumes_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [volumesPeerExternalClusterSample.ts][volumespeerexternalclustersample]                           | starts peering the external cluster for this migration volume x-ms-original-file: 2025-12-01/Volumes_PeerExternalCluster.json                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumesPerformReplicationTransferSample.ts][volumesperformreplicationtransfersample]             | performs an adhoc replication transfer on a volume with volumeType Migration x-ms-original-file: 2025-12-01/Volumes_PerformReplicationTransfer.json                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [volumesPoolChangeSample.ts][volumespoolchangesample]                                             | moves volume to another pool x-ms-original-file: 2025-12-01/Volumes_PoolChange.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [volumesPopulateAvailabilityZoneSample.ts][volumespopulateavailabilityzonesample]                 | this operation will populate availability zone information for a volume x-ms-original-file: 2025-12-01/Volumes_PopulateAvailabilityZones.json                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumesReInitializeReplicationSample.ts][volumesreinitializereplicationsample]                   | re-Initializes the replication connection on the destination volume x-ms-original-file: 2025-12-01/Volumes_ReInitializeReplication.json                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [volumesReestablishReplicationSample.ts][volumesreestablishreplicationsample]                     | re-establish a previously deleted replication between 2 volumes that have a common ad-hoc or policy-based snapshots x-ms-original-file: 2025-12-01/Volumes_ReestablishReplication.json                                                                                                                                                                                                                                                                                                                                                                                         |
| [volumesRelocateSample.ts][volumesrelocatesample]                                                 | relocates volume to a new stamp x-ms-original-file: 2025-12-01/Volumes_Relocate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [volumesReplicationStatusSample.ts][volumesreplicationstatussample]                               | get the status of the replication x-ms-original-file: 2025-12-01/Volumes_ReplicationStatus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [volumesResetCifsPasswordSample.ts][volumesresetcifspasswordsample]                               | reset cifs password from volume x-ms-original-file: 2025-12-01/Volumes_ResetCifsPassword.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumesResyncReplicationSample.ts][volumesresyncreplicationsample]                               | resync the connection on the destination volume. If the operation is ran on the source volume it will reverse-resync the connection and sync from destination to source. x-ms-original-file: 2025-12-01/Volumes_ResyncReplication.json                                                                                                                                                                                                                                                                                                                                         |
| [volumesRevertRelocationSample.ts][volumesrevertrelocationsample]                                 | reverts the volume relocation process, cleans up the new volume and starts using the former-existing volume. x-ms-original-file: 2025-12-01/Volumes_RevertRelocation.json                                                                                                                                                                                                                                                                                                                                                                                                      |
| [volumesRevertSample.ts][volumesrevertsample]                                                     | revert a volume to the snapshot specified in the body x-ms-original-file: 2025-12-01/Volumes_Revert.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [volumesSplitCloneFromParentSample.ts][volumessplitclonefromparentsample]                         | split operation to convert clone volume to an independent volume. x-ms-original-file: 2025-12-01/Volumes_SplitClone.json                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [volumesUpdateSample.ts][volumesupdatesample]                                                     | patch the specified volume x-ms-original-file: 2025-12-01/Volumes_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/accountsChangeKeyVaultSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/accountsChangeKeyVaultSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[accountschangekeyvaultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsChangeKeyVaultSample.ts
[accountscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsCreateOrUpdateSample.ts
[accountsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsDeleteSample.ts
[accountsgetchangekeyvaultinformationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsGetChangeKeyVaultInformationSample.ts
[accountsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsGetSample.ts
[accountslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsListBySubscriptionSample.ts
[accountslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsListSample.ts
[accountsrenewcredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsRenewCredentialsSample.ts
[accountstransitiontocmksample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsTransitionToCmkSample.ts
[accountsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/accountsUpdateSample.ts
[backuppoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupPoliciesCreateSample.ts
[backuppoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupPoliciesDeleteSample.ts
[backuppoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupPoliciesGetSample.ts
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupPoliciesListSample.ts
[backuppoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupPoliciesUpdateSample.ts
[backupvaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupVaultsCreateOrUpdateSample.ts
[backupvaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupVaultsDeleteSample.ts
[backupvaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupVaultsGetSample.ts
[backupvaultslistbynetappaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupVaultsListByNetAppAccountSample.ts
[backupvaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupVaultsUpdateSample.ts
[backupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsCreateSample.ts
[backupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsDeleteSample.ts
[backupsgetlateststatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsGetLatestStatusSample.ts
[backupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsGetSample.ts
[backupsgetvolumelatestrestorestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsGetVolumeLatestRestoreStatusSample.ts
[backupslistbyvaultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsListByVaultSample.ts
[backupsunderaccountmigratebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsUnderAccountMigrateBackupsSample.ts
[backupsunderbackupvaultrestorefilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsUnderBackupVaultRestoreFilesSample.ts
[backupsundervolumemigratebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsUnderVolumeMigrateBackupsSample.ts
[backupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/backupsUpdateSample.ts
[netappresourcecheckfilepathavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceCheckFilePathAvailabilitySample.ts
[netappresourcechecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceCheckNameAvailabilitySample.ts
[netappresourcecheckquotaavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceCheckQuotaAvailabilitySample.ts
[netappresourcequerynetworksiblingsetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceQueryNetworkSiblingSetSample.ts
[netappresourcequeryregioninfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceQueryRegionInfoSample.ts
[netappresourcequotalimitsaccountgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceQuotaLimitsAccountGetSample.ts
[netappresourcequotalimitsaccountlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceQuotaLimitsAccountListSample.ts
[netappresourcequotalimitsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceQuotaLimitsGetSample.ts
[netappresourcequotalimitslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceQuotaLimitsListSample.ts
[netappresourceregioninfosgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceRegionInfosGetSample.ts
[netappresourceregioninfoslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceRegionInfosListSample.ts
[netappresourceupdatenetworksiblingsetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceUpdateNetworkSiblingSetSample.ts
[netappresourceusagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceUsagesGetSample.ts
[netappresourceusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/netAppResourceUsagesListSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/operationsListSample.ts
[poolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/poolsCreateOrUpdateSample.ts
[poolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/poolsDeleteSample.ts
[poolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/poolsGetSample.ts
[poolslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/poolsListSample.ts
[poolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/poolsUpdateSample.ts
[ransomwarereportsclearsuspectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/ransomwareReportsClearSuspectsSample.ts
[ransomwarereportsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/ransomwareReportsGetSample.ts
[ransomwarereportslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/ransomwareReportsListSample.ts
[snapshotpoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotPoliciesCreateSample.ts
[snapshotpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotPoliciesDeleteSample.ts
[snapshotpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotPoliciesGetSample.ts
[snapshotpolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotPoliciesListSample.ts
[snapshotpolicieslistvolumessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotPoliciesListVolumesSample.ts
[snapshotpoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotPoliciesUpdateSample.ts
[snapshotscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotsCreateSample.ts
[snapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotsDeleteSample.ts
[snapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotsGetSample.ts
[snapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotsListSample.ts
[snapshotsrestorefilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotsRestoreFilesSample.ts
[snapshotsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/snapshotsUpdateSample.ts
[subvolumescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/subvolumesCreateSample.ts
[subvolumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/subvolumesDeleteSample.ts
[subvolumesgetmetadatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/subvolumesGetMetadataSample.ts
[subvolumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/subvolumesGetSample.ts
[subvolumeslistbyvolumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/subvolumesListByVolumeSample.ts
[subvolumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/subvolumesUpdateSample.ts
[volumegroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeGroupsCreateSample.ts
[volumegroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeGroupsDeleteSample.ts
[volumegroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeGroupsGetSample.ts
[volumegroupslistbynetappaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeGroupsListByNetAppAccountSample.ts
[volumequotarulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeQuotaRulesCreateSample.ts
[volumequotarulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeQuotaRulesDeleteSample.ts
[volumequotarulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeQuotaRulesGetSample.ts
[volumequotaruleslistbyvolumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeQuotaRulesListByVolumeSample.ts
[volumequotarulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumeQuotaRulesUpdateSample.ts
[volumesauthorizeexternalreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesAuthorizeExternalReplicationSample.ts
[volumesauthorizereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesAuthorizeReplicationSample.ts
[volumesbreakfilelockssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesBreakFileLocksSample.ts
[volumesbreakreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesBreakReplicationSample.ts
[volumescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesCreateOrUpdateSample.ts
[volumesdeletereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesDeleteReplicationSample.ts
[volumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesDeleteSample.ts
[volumesfinalizeexternalreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesFinalizeExternalReplicationSample.ts
[volumesfinalizerelocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesFinalizeRelocationSample.ts
[volumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesGetSample.ts
[volumeslistgetgroupidlistforldapusersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesListGetGroupIdListForLdapUserSample.ts
[volumeslistquotareportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesListQuotaReportSample.ts
[volumeslistreplicationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesListReplicationsSample.ts
[volumeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesListSample.ts
[volumespeerexternalclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesPeerExternalClusterSample.ts
[volumesperformreplicationtransfersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesPerformReplicationTransferSample.ts
[volumespoolchangesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesPoolChangeSample.ts
[volumespopulateavailabilityzonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesPopulateAvailabilityZoneSample.ts
[volumesreinitializereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesReInitializeReplicationSample.ts
[volumesreestablishreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesReestablishReplicationSample.ts
[volumesrelocatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesRelocateSample.ts
[volumesreplicationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesReplicationStatusSample.ts
[volumesresetcifspasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesResetCifsPasswordSample.ts
[volumesresyncreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesResyncReplicationSample.ts
[volumesrevertrelocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesRevertRelocationSample.ts
[volumesrevertsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesRevertSample.ts
[volumessplitclonefromparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesSplitCloneFromParentSample.ts
[volumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/typescript/src/volumesUpdateSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-netapp?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/netapp/arm-netapp/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
